samples/_failures_safe/1761216092_7e5a2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddd644c8.c: In function ‘main’:
./samples/SAFE/__tmp_ddd644c8.c:143:17: error: expected ‘;’ at end of input
  143 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_ddd644c8.c:143:9: error: expected declaration or statement at end of input
  143 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_ddd644c8.c:143:9: error: expected declaration or statement at end of input
